read more -> read less

--- a/portal-frontend/src/app/features/create-application-dialog/create-application-dialog.component.html
+++ b/portal-frontend/src/app/features/create-application-dialog/create-application-dialog.component.html
@@ -68,7 +68,7 @@
         (selectedAppType && currentStepIndex === applicationStep)
       "
       (click)="onReadMoreClicked()"
-      ><u>Read More</u></span
+      ><u>Read {{ readMoreClicked ? 'Less' : 'More' }}</u></span
     >
   </div>
 
