--- a/portal-frontend/src/app/features/create-application-dialog/create-application-dialog.component.html
+++ b/portal-frontend/src/app/features/create-application-dialog/create-application-dialog.component.html
@@ -46,7 +46,7 @@
         id="subTypeDescription"
         *ngIf="currentStepIndex === submissionStep"
         [ngClass]="{ 'ellipsis-3': !readMoreClicked }"
-        [innerHtml]="selectedSubmissionType?.htmlDescription"
+        [innerHtml]="selectedSubmissionType?.portalHtmlDescription"
       ></div>
     </div>
     <div>
