Add form styling + show file uploads
* Add new columns to store file name and file size
* Show files attached to the application on the file picker
* Update file picker to have mobile styles
* Add form controls scss file to clean up our form styling
* Add GRPC calls for getting an open URL and deleting documents

--- a/portal-frontend/src/app/app.component.scss
+++ b/portal-frontend/src/app/app.component.scss
@@ -20,8 +20,12 @@
     overflow: auto;
     margin: rem(8) rem(24);
 
-    // TODO: this is just a placeholder and will be addressed later
     @media screen and (min-width: $tabletBreakpoint) {
+      margin: rem(12) rem(36) !important;
+    }
+
+    // TODO: this is just a placeholder and will be addressed later
+    @media screen and (min-width: $desktopBreakpoint) {
       margin: rem(18) rem(80) !important;
     }
   }
