--- a/portal-frontend/src/app/features/edit-application/parcel-entry/parcel-entry.component.html
+++ b/portal-frontend/src/app/features/edit-application/parcel-entry/parcel-entry.component.html
@@ -1,40 +1,45 @@
-<div class='container'>
-  <div class='type'>
+<div class="container">
+  <div class="type">
     <h6>Parcel Type</h6>
-    <mat-radio-group class='radio-row' aria-label='Select a parcel type'>
-      <mat-radio-button value='fee'>Fee Simple</mat-radio-button>
-      <mat-radio-button value='crown'>Crown</mat-radio-button>
+    <mat-radio-group class="radio-row" aria-label="Select a parcel type">
+      <mat-radio-button value="fee">Fee Simple</mat-radio-button>
+      <mat-radio-button value="crown">Crown</mat-radio-button>
     </mat-radio-group>
   </div>
   <h5>Parcel Lookup</h5>
-  <form [formGroup]='parcelForm'>
-    <div class='form-row'>
+  <form [formGroup]="parcelForm">
+    <div class="form-row">
       <div>
-        <h6>PID/PIN</h6>
-        <mat-form-field class='full-width-input' appearance='outline'>
-          <input type='number' matInput placeholder='Enter PID / PIN' formControlName='pidPin' />
+        <label for="pid">PID/PIN</label>
+        <mat-form-field class="full-width-input" appearance="outline">
+          <input id="pid" type="number" matInput placeholder="Enter PID / PIN" formControlName="pidPin" />
         </mat-form-field>
       </div>
-      <div class='search-buttons'>
-        <button (click)='onSearch()'>Search</button>
-        <button (click)='onReset()'>Reset</button>
+      <div class="search-buttons">
+        <button (click)="onSearch()">Search</button>
+        <button (click)="onReset()">Reset</button>
       </div>
-      <div class='full-row'>
-        <h6>Legal Description</h6>
-        <mat-form-field class='full-width-input' appearance='outline'>
-          <input matInput placeholder='Enter legal Description' formControlName='legalDescription' />
+      <div class="full-row">
+        <label for="legal-description">Legal Description</label>
+        <mat-form-field class="full-width-input" appearance="outline">
+          <input
+            id="legal-description"
+            matInput
+            placeholder="Enter legal description"
+            formControlName="legalDescription"
+          />
         </mat-form-field>
       </div>
       <div>
-        <h6>Map Area (Hectares)</h6>
-        <mat-form-field class='full-width-input' appearance='outline'>
-          <input type='number' matInput placeholder='Enter parcel size' formControlName='mapArea' />
+        <label for="map-area">Map Area (Hectares)</label>
+        <mat-form-field class="full-width-input" appearance="outline">
+          <input id="map-area" type="number" matInput placeholder="Enter parcel size" formControlName="mapArea" />
         </mat-form-field>
       </div>
       <div>
-        <h6>PIN</h6>
-        <mat-form-field class='full-width-input' appearance='outline'>
-          <input type='number' matInput placeholder='Enter PIN' formControlName='pin' />
+        <label for="pin">PIN</label>
+        <mat-form-field class="full-width-input" appearance="outline">
+          <input id="pin" type="number" matInput placeholder="Enter PIN" formControlName="pin" />
         </mat-form-field>
       </div>
     </div>
