--- a/portal-frontend/src/app/features/edit-application/parcel-entry/parcel-entry.component.scss
+++ b/portal-frontend/src/app/features/edit-application/parcel-entry/parcel-entry.component.scss
@@ -1,4 +1,5 @@
 @import '../../../../styles/functions.scss';
+@import '../../../../styles/typography.scss';
 
 .container {
   margin: rem(20) 0 rem(40) 0;
@@ -11,13 +12,20 @@
 .form-row {
   margin-top: rem(16);
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr;
   grid-column-gap: rem(30);
+
+  @media screen and (min-width: $desktopBreakpoint) {
+    & {
+      grid-template-columns: 1fr 1fr;
+    }
+
+    .full-row {
+      grid-column: 1/3;
+    }
+  }
 }
 
-.full-row {
-  grid-column: 1/3;
-}
 
 .radio-row {
   margin: rem(10) 0;
