--- a/portal-frontend/src/app/shared/file-drag-drop/file-drag-drop.component.html
+++ b/portal-frontend/src/app/shared/file-drag-drop/file-drag-drop.component.html
@@ -1,12 +1,31 @@
-<input type='file' class='file-input' (change)='fileSelected($event)' #fileUpload>
-<div *ngIf='!files.length' class='file-drag-drop' dragDropFile (files)='filesDropped($event)'>
+<input type='file' class='file-input' (change)='fileSelected($event)' #fileUpload />
+<div *ngIf='!uploadedFiles.length' class='desktop-file-drag-drop' dragDropFile (files)='filesDropped($event)'>
   <div class='content'>
     <div class='icon'>
       <mat-icon inline='true'>cloud_upload</mat-icon>
     </div>
-    <button type="button" (click)='fileUpload.click()' mat-flat-button color='accent'>
-      Choose files to Upload
-    </button>
+    <button type='button' (click)='fileUpload.click()' mat-flat-button color='accent'>Choose file to Upload</button>
     <div class='drag-text'>or drag and drop them here</div>
+  </div>
+</div>
+<button
+  *ngIf='!uploadedFiles.length'
+  type='button'
+  class='mobile-file-drag-drop'
+  (click)='fileUpload.click()'
+  mat-flat-button
+  color='accent'
+>
+  Upload File
+</button>
+<div *ngIf='uploadedFiles'>
+  <div class='uploaded-file' *ngFor='let file of uploadedFiles'>
+    <div class='file-name'>
+      <a (click)='fileOpened(file.uuid)'>{{ file.fileName }}</a>&ensp;({{ file.fileSize | filesize }})
+    </div>
+    <button mat-button aria-label='Remove File' (click)='_deleteFile(file)'>
+      <mat-icon>close</mat-icon>
+      REMOVE
+    </button>
   </div>
 </div>
