--- a/portal-frontend/src/app/shared/file-drag-drop/file-drag-drop.component.scss
+++ b/portal-frontend/src/app/shared/file-drag-drop/file-drag-drop.component.scss
@@ -1,13 +1,25 @@
-@import "../../../styles/colors";
+@import '../../../styles/colors';
+@import '../../../styles/typography';
 
 .file-input {
   display: none;
 }
 
-.file-drag-drop {
+.desktop-file-drag-drop {
   border: 0.2rem dashed rgba($grey-dark, 0.5);
   border-radius: 0.4rem;
   width: 100%;
+  display: none;
+}
+
+.mobile-file-drag-drop {
+  width: 100%;
+}
+
+a {
+  color: $link-color;
+  text-decoration: underline;
+  cursor: pointer;
 }
 
 .icon {
@@ -27,4 +39,40 @@
   flex-direction: column;
   align-items: center;
   padding: 2rem;
+}
+
+.uploaded-file {
+  border: 1px solid #000000;
+  border-radius: 4px;
+  padding: 8px;
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+
+  .file-name {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  button {
+    margin-top: rem(6);
+  }
+}
+
+@media screen and (min-width: $tabletBreakpoint) {
+  .desktop-file-drag-drop {
+    display: block;
+  }
+  .mobile-file-drag-drop {
+    display: none;
+  }
+  .uploaded-file {
+    display: flex;
+    justify-content: space-between;
+
+    .file-name {
+      display: flex;
+      justify-content: flex-start;
+    }
+  }
 }
