--- a/portal-frontend/src/styles.scss
+++ b/portal-frontend/src/styles.scss
@@ -1,14 +1,16 @@
 @use '@angular/material' as mat;
 
-@import 'styles/theme';
-@import 'styles/typography';
-@import 'styles/colors';
-@import 'styles/buttons';
-
 // Include the common styles for Angular Material. We include this here so that you only
 // have to load a single css file for Angular Material in your app.
 // Be sure that you only ever include this mixin once!
 @include mat.core();
+
+//Include after mat.core so we can override
+@import 'styles/theme';
+@import 'styles/typography';
+@import 'styles/colors';
+@import 'styles/buttons';
+@import 'styles/form-controls';
 
 html,
 body {
@@ -26,6 +28,7 @@ body {
 
 body {
   font-size: rem(16);
+  min-width: rem(240);
 }
 
 * {
