--- a/portal-frontend/src/app/features/create-application-dialog/create-application-dialog.component.scss
+++ b/portal-frontend/src/app/features/create-application-dialog/create-application-dialog.component.scss
@@ -13,7 +13,7 @@
   #radio-label {
     display: block;
     line-height: rem(36);
-    margin-bottom: 24px;
+    margin-bottom: rem(24);
   }
 
   .dialog-content-wrapper {
