--- a/portal-frontend/src/app/features/home/home.component.scss
+++ b/portal-frontend/src/app/features/home/home.component.scss
@@ -1,13 +1,9 @@
 @import '../../../styles/colors';
-
-.header-row {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
+@import '../../../styles/functions';
+@import '../../../styles/typography';
 
 .warning-banner {
-  background-color: rgba($secondary-color-light, 0.5);
+  background-color: rgba($accent-color-light, 0.5);
   padding: 1.6rem;
   display: flex;
   margin: 2.4rem 0;
@@ -17,5 +13,53 @@
     justify-content: center;
     align-items: center;
     padding: 1.2rem;
+  }
+}
+
+.header-row {
+  .learn-more-wrapper {
+    margin-top: rem(24);
+    margin-bottom: rem(24);
+    .learn-more-ctr {
+      display: inline-block;
+      color: $accent-color;
+      text-transform: uppercase;
+
+      mat-icon {
+        padding-top: rem(6);
+      }
+    }
+
+    .learn-more-ctr:hover {
+      cursor: pointer;
+    }
+  }
+  .mobile-btn {
+    width: 100%;
+  }
+  .btn {
+    display: none;
+  }
+
+  .title {
+    display: block;
+  }
+
+  @media screen and (min-height: $desktopBreakpoint) {
+    .title {
+      line-height: rem(52);
+      display: flex;
+      justify-content: space-between;
+      margin-bottom: rem(16);
+    }
+
+    .mobile-btn {
+      display: none;
+    }
+    .btn {
+      display: inline-block;
+      width: rem(193);
+      height: rem(43);
+    }
   }
 }
