--- a/portal-frontend/src/styles.scss
+++ b/portal-frontend/src/styles.scss
@@ -45,3 +45,23 @@ body {
   justify-content: center;
   align-items: center;
 }
+
+.no-padding .mat-dialog-container {
+  padding: 0;
+}
+
+@mixin text-ellipsis($lines: 1) {
+  text-overflow: ellipsis;
+  overflow: hidden;
+  @if ($lines > 1) {
+    display: -webkit-box;
+    -webkit-line-clamp: $lines;
+    -webkit-box-orient: vertical;
+  } @else {
+    white-space: nowrap;
+  }
+}
+
+.ellipsis-3 {
+  @include text-ellipsis($lines: 3);
+}
