--- a/portal-frontend/src/app/features/home/application-list/application-list.component.scss
+++ b/portal-frontend/src/app/features/home/application-list/application-list.component.scss
@@ -15,9 +15,14 @@ table {
   color: $accent-color-dark;
 }
 
-.submitted {
+.submitted-to-alc {
   background-color: $primary-color-light;
   color: $primary-color-dark;
+}
+
+.submitted-to-lg {
+  background-color: $secondary-color-light;
+  color: $secondary-color-dark;
 }
 
 .cancelled {
