--- a/portal-frontend/src/app/features/home/home.component.scss
+++ b/portal-frontend/src/app/features/home/home.component.scss
@@ -128,7 +128,7 @@
     ::ng-deep .mat-tab-labels {
       display: flex;
       flex-wrap: nowrap;
-      justify-content: space-evenly;
+      justify-content: space-between;
 
       .mat-tab-label {
         width: 33%;
