--- a/portal-frontend/src/app/features/home/home.component.html
+++ b/portal-frontend/src/app/features/home/home.component.html
@@ -2,37 +2,40 @@
   <div class="header-row">
     <diV class="title">
       <h3>Portal Inbox</h3>
-      <button class="btn" (click)="onCreateApplication()" color="accent" mat-flat-button>
-        + Create New
-      </button>
+      <button class="btn" (click)="onCreateApplication()" color="accent" mat-flat-button>+ Create New</button>
     </diV>
-    <p>
-      Create and manage your Applications, Notice of Intent, and Notification of SRW.
-    </p>
+    <p>Create and manage your Applications, Notice of Intent, and Notification of SRW.</p>
     <div class="learn-more-wrapper">
-      <div class="learn-more-ctr" color="accent" (click)="onLearnMoreClick()">Learn
-        more<mat-icon>{{isLearnMoreOpen ? 'expand_less' : 'expand_more'}}</mat-icon></div>
+      <div class="learn-more-ctr" color="accent" (click)="onLearnMoreClick()">
+        Learn more<mat-icon>{{ isLearnMoreOpen ? 'expand_less' : 'expand_more' }}</mat-icon>
+      </div>
       <div *ngIf="isLearnMoreOpen">
         <app-landing-page [isControlsVisible]="false"></app-landing-page>
       </div>
     </div>
     <div>
-      <button class="mobile-btn" (click)="onCreateApplication()" color="accent" mat-flat-button>
-        + Create New
-      </button>
+      <button class="mobile-btn" (click)="onCreateApplication()" color="accent" mat-flat-button>+ Create New</button>
     </div>
   </div>
-  <div>
-    <div class="warning-banner">
-      <div class="icon">
-        <mat-icon>info</mat-icon>
-      </div>
-      Create an Application if you are proposing to exclude, include, subdivide, conduct a non-farm use activity,
-      conduct a non-adhering residential use, conduct a transportation/utility/recreational trail use, or conduct a soil
-      or fill use. Non-adhering residential use applications have a fee of $750. All other applications have a fee of
-      $1,500 fee, except for inclusion of land (no fee). Application fees are split equally between the local government
-      and the ALC.
-    </div>
-    <app-application-list></app-application-list>
+  <div class="navigation-wrapper">
+    <mat-tab-group>
+      <mat-tab label="Application">
+        <div class="warning-banner responsive-flex-wrapper">
+          <div class="icon">
+            <mat-icon>info</mat-icon>
+          </div>
+          <div class="description">
+            Create an Application if you are proposing to exclude, include, subdivide, conduct a non-farm use activity,
+            conduct a non-adhering residential use, conduct a transportation/utility/recreational trail use, or conduct
+            a soil or fill use. Non-adhering residential use applications have a fee of $750. All other applications
+            have a fee of $1,500 fee, except for inclusion of land (no fee). Application fees are split equally between
+            the local government and the ALC.
+          </div>
+        </div>
+        <app-application-list></app-application-list>
+      </mat-tab>
+      <mat-tab label="Notice of Intent"> Notice of Intent </mat-tab>
+      <mat-tab label="Notification of SRW"> Notification of SRW </mat-tab>
+    </mat-tab-group>
   </div>
 </div>
