wip change app type dialog

--- a/portal-frontend/src/app/features/edit-application/edit-application.component.scss
+++ b/portal-frontend/src/app/features/edit-application/edit-application.component.scss
@@ -1,7 +1,38 @@
 @import '../../../styles/typography';
+@import '../../../styles/functions';
 
 .header {
   margin: 2em 0;
+  display: flex;
+  justify-content: space-between;
+  flex-flow: row wrap;
+
+  h6 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .change-app-type-btn-wrapper {
+    margin: rem(16) 0;
+
+    .mat-icon {
+      vertical-align: middle;
+      margin-left: rem(8);
+      width: rem(20);
+      height: rem(20);
+      font-size: rem(22);
+    }
+  }
+
+  @media screen and (min-width: $tabletBreakpoint) {
+    .mat-icon {
+      margin-left: rem(16);
+      font-size: rem(24);
+      width: rem(24);
+      height: rem(24);
+    }
+  }
 }
 
 .form-row {
